force-app/main/default/objects/Sales_Order__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fulfillment stockist</description>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Distributor)</relationshipLabel>
    <relationshipName>Sales_Orders_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>