force-app/main/default/objects/Sales_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Order booking date</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>