force-app/main/default/objects/Sales_Order__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Rep booking the order</description>
    <label>Sales Representative</label>
    <referenceTo>Medical_Representative__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>