force-app/main/default/objects/Sales_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total value of order line items</description>
    <label>Total Amount</label>
    <summarizedField>Sales_Order_Line__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>